--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-gym = "^0.26.2"
 torch = "^2.3.1"
+stable-baselines = "^2.10.2"
+stable-baselines3 = "^2.3.2"
+mujoco-py = "^2.1.2.14"
+pybullet = "^3.2.6"
+tensorboard = "^2.17.0"
+gym = "^0.26.2"
+wandb = "^0.17.3"
+moviepy = "^1.0.3"
 
 
 [build-system]
